@@ -1,3 +1,0 @@
-#!/bin/sh
-cd src/main
-./dime
